--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,15 @@ body {
 	<body>
 		<center>
 			<h1>Bunny</h1>
-			<img src="/latest.jpeg" />
+			<img src="/latest.jpeg" id="latest" />
 		</center>
+		<script>
+var img = document.getElementById("latest");
+
+var stream = new EventSource("/stream.hack");
+stream.addEventListener("image", function(e) {
+	img.src = "data:image/jpeg;base64," + e.data;
+});
+		</script>
 	</body>
 </html>
